# crebain-native

./: .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  eslint.config.js  flake.nix  index.html  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  codeql.yml  nix.yml  release.yml  ros-ci.yml  scorecard.yml
.windsurf/workflows/: manual-smoke-test.md
crates/crebain-app/: Cargo.toml
crates/crebain-app/src/: circular_buffer.rs  main.rs
crates/crebain-app/src/app_state/: mod.rs
crates/crebain-app/src/camera/: mod.rs
crates/crebain-app/src/detection/: mod.rs
crates/crebain-app/src/scene/: mod.rs
crates/crebain-app/src/transport/: events.rs  mod.rs
crates/crebain-app/src/ui/: mod.rs
crates/crebain-app/src/ui/hud/: mod.rs
crates/crebain-app/src/ui/top_menu/: mod.rs
crates/crebain-app/src/viewer/: detection_overlay.rs  drone.rs  grid.rs  mod.rs  terrain.rs
crates/crebain-core/: Cargo.toml
crates/crebain-core/src/: coreml.rs  lib.rs  onnx_detector.rs  sensor_fusion.rs  zig_detector.rs
crates/crebain-core/src/common/: coco.rs  detection.rs  error.rs  mod.rs  nms.rs  path.rs  yolo.rs
crates/crebain-core/src/inference/: coreml.rs  cuda.rs  mlx.rs  mod.rs  onnx.rs  tensorrt.rs
crates/crebain-core/src/transport/: commands.rs  mod.rs  zenoh.rs
docs/: MANUAL_SMOKE_TEST.md  MODEL_CONTRACTS.md  NCP_BRIDGE_HANDOFF.md  RELEASE_ACCEPTANCE.md  RELEASE_EVIDENCE.md
native/coreml-ffi/: Package.swift
native/coreml-ffi/Sources/: CoreMLFFI.swift
native/coreml-ffi/include/: coreml_ffi.h
native/zig-detector/: build.zig
native/zig-detector/src/: benchmark.zig  crebain_detector.h  detector.zig
native/zig-detector/src/backends/: common.c  coreml_backend.m  cuda_backend.c  mps_backend.m
public/models/: README.md
ros/: README.md
scripts/: validate_ros_defs.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  deny.toml
src-tauri/src/: coreml.rs  lib.rs  sensor_fusion.rs
src-tauri/src/common/: image.rs  path.rs
src-tauri/src/inference/: coreml.rs  cuda.rs  mlx.rs  mod.rs  onnx.rs
src-tauri/src/ncp/: README.md  mod.rs
src-tauri/src/transport/: commands.rs  mod.rs  rosbridge.rs  zenoh.rs
src/components/: AboutModal.tsx  BasePanel.tsx  CameraFeed.tsx  CrebainViewer.tsx  DetectionOverlay.tsx  DroneSpawnPanel.tsx  ErrorBoundary.tsx  ObjectTransformControls.tsx  PerformancePanel.tsx  ROSConnectionPanel.tsx  SaveLoadPanel.tsx  SensorFusionPanel.tsx
src/components/__tests__/: SaveLoadPanel.test.tsx
src/components/viewer/: DetectionPanel.tsx  HeaderBar.tsx  TacticalGrid.ts  types.ts
src/components/viewer/__tests__/: viewerPanels.test.tsx
src/context/: UIScaleContext.tsx
src/detection/: AdvancedSensorFusion.ts  CoreMLDetector.ts  DetectionWorker.ts  MoondreamDetector.ts  RFDETRDetector.ts  SensorFusion.ts  YOLODetector.ts  detectorMath.ts  detectorPreprocess.ts  nativeDetectionResult.ts  scenarioFixtures.ts  tensorValidation.ts  types.ts
src/detection/__tests__/: AdvancedSensorFusion.test.ts  DetectorBenchmark.test.ts  SensorFusion.test.ts  detectorMath.test.ts  detectorPreprocess.test.ts  scenarioFixtures.test.ts  tensorValidation.test.ts
src/hooks/: index.ts  useCoreMLDetection.ts  useCoreMLDiagnostics.ts  useCrebainScene.ts  useDetection.ts  useDetectionLoop.ts  useDraggable.ts  useDraggable3D.ts  useDraggablePanel.ts  useDroneController.ts  useDroneSystem.ts  useGazeboDrones.ts  useGazeboSimulation.ts  useKeyboardControls.ts  useObjectSelection.ts  usePerformanceTracker.ts  useRosActuatorLoop.ts  useRosBridge.ts  useSceneState.ts  useScheduling.ts  useSurveillanceCameras.ts  useTacticalConsole.ts
src/hooks/__tests__/: useCoreMLDetection.test.tsx  useCoreMLDiagnostics.test.tsx  useDetection.test.tsx  useDetectionLoop.test.ts  useGazeboDrones.test.tsx  useGazeboSimulation.test.tsx  useRosBridge.test.tsx  useSceneState.test.tsx  useScheduling.test.ts
src/lib/: CircularBuffer.ts  diagnostics.ts  droneCategories.ts  logger.ts  mathUtils.ts  positioningUtils.ts  shortcuts.ts  tauriCommands.ts
src/lib/__tests__/: ciWorkflow.test.ts  diagnostics.test.ts  shortcuts.test.ts  tauriCommandRegistration.test.ts  tauriCommands.test.ts  transportEvents.test.ts
src/lib/three/: sceneObjects.ts
src/neuro/: README.md  index.ts  ncp.ts  ws.ts
src/physics/: DronePhysics.ts  DroneTypes.ts  SensorSimulation.ts
src/ros/: GuidanceController.ts  MessageRegistry.ts  ROSBridge.ts  ROSCameraStream.ts  TransformManager.ts  WaypointManager.ts  ZenohBridge.ts  useROSCamera.ts  useROSSensors.ts  utils.ts
src/ros/__tests__/: GuidanceController.test.ts  MessageRegistry.test.ts  ROSBridge.test.ts  TransformManager.test.ts  ZenohBridge.test.ts  useROSSensors.test.ts  utils.test.ts
src/simulation/: InterceptionSystem.ts
src/simulation/__tests__/: InterceptionSystem.test.ts
src/state/: SceneState.ts
src/state/__tests__/: SceneState.test.ts
