[package]
name = "crebain"
version = "0.4.0"
description = "CREBAIN - Adaptive Response & Awareness System (ARAS)"
authors = ["CREBAIN Contributors"]
license = "MIT"
repository = "https://github.com/sepehrmn/crebain"
edition = "2021"
rust-version = "1.81.0"

[lib]
name = "crebain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[features]
default = ["zenoh-transport"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
zenoh-transport = ["zenoh"]
# Python bindings via PyO3 (abi3). Off by default; opt-in for Python/ML scripting.
pyo3-bindings = ["dep:pyo3"]
# TypeScript type generation via ts-rs. Off by default; run `cargo test export-ts-types`
# (or the build.rs hook) to regenerate src/__generated__/rust_types.ts.
ts-export = ["dep:ts-rs"]
# Neuro-Cybernetic Protocol client (Engram/Paper2Brain). Off by default; opt-in so
# the default build and command-contract test are unchanged. Requires the sibling
# Paper2Brain/ncp workspace (the NCP standard SDK).
ncp = ["dep:ncp-core", "dep:ncp-zenoh"]
# Dummy feature to silence warning from objc crate which checks for feature = "cargo-clippy"
cargo-clippy = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cargo_clippy)'] }

[lints.clippy]
# Every `unsafe` block must carry a `// SAFETY:` comment justifying it.
undocumented_unsafe_blocks = "warn"

[dependencies]
tauri = { version = "2.10", features = [] }
# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"

# Tauri framework (updated to 2.10.x)
tauri-plugin-log = "2"

# Encoding
base64 = "0.22"
sha2 = "0.10"

# Image processing
image = "0.25"

# Linear algebra for Kalman filters
nalgebra = "0.35"

# Random number generation (updated to 0.9.x series)
rand = "0.9"
rand_distr = "0.5"

# ONNX Runtime for cross-platform ML inference (fallback/universal backend)
# Using the pinned 2.0.0 release-candidate API selected for this project.
ort = "2.0.0-rc.10"

# Zenoh-oriented ROS2 communication (updated to 1.7.x)
# Deployment latency depends on topology, payloads, and transport configuration.
zenoh = { version = "1.9", features = ["default"], optional = true }

# Neuro-Cybernetic Protocol (NCP) standard SDK — canonical home is the sibling
# Paper2Brain/ncp workspace. Path dep is the local-sibling-dev contract; switch to
# a git/crates.io dep for standalone/external builds (one-line change). Optional,
# pulled in only by the `ncp` feature.
ncp-core = { path = "../../Paper2Brain/ncp/ncp-core", optional = true }
ncp-zenoh = { path = "../../Paper2Brain/ncp/ncp-zenoh", optional = true }

# TypeScript type generation from Rust types (serde-compat for existing Serialize derives)
ts-rs = { version = "12", features = ["serde-compat"], optional = true }

# Python bindings (abi3 — compatible with Python 3.11+)
pyo3 = { version = "0.23", features = ["abi3-py311"], optional = true }

# Async runtime for Zenoh (updated to 1.48.x LTS track)
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time"] }

# WebSocket client for rosbridge fallback transport
tokio-tungstenite = { version = "0.29", features = ["connect"] }
futures-util = "0.3"

# CDR (Common Data Representation) for ROS2 message serialization
cdr = "0.2"

# Byteorder for CDR parsing
byteorder = "1.5"

# Dev: enable Tauri's mock runtime for AppHandle-backed IPC integration tests.
[dev-dependencies]
tauri = { version = "2.10", features = ["test"] }

# ═══════════════════════════════════════════════════════════════════════════════
# BUILD PROFILES - Optimized for ML inference and sensor fusion performance
# ═══════════════════════════════════════════════════════════════════════════════

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false
strip = "symbols"

[profile.dev]
opt-level = 1
debug = 1

# macOS native CoreML FFI
[target.'cfg(target_os = "macos")'.dependencies]
# objc 0.2 is unmaintained. Migration to the objc2 ecosystem (Retained<T> RAII)
# is tracked in the backlog; it rewrites the Vision/CoreML memory management in
# src/coreml.rs and must be runtime-validated on Apple Silicon with a real model
# before it can replace the current, extensively SAFETY-documented FFI.
objc = "0.2"

# MLX-style inference on Apple Silicon using Candle with Metal backend
# Updated to 0.9.x series for latest features
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = "0.9"
safetensors = "0.6"
half = "2.6"  # FP16 support for Metal GPU
shellexpand = "3.1"  # Path expansion for model search

# Linux: Enable CUDA execution provider for ONNX Runtime
[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["cuda", "load-dynamic"] }
