[package]
name = "crebain-app"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crebain-core = { path = "../crebain-core" }
bevy = "0.15"
bevy_egui = "0.32"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }